# wxBriscola

./: BriscoApp.cpp  BriscoApp.h  BriscoFrame - Copia.cpp  BriscoFrame - Copia.h  BriscoFrame.cpp  BriscoFrame.h  BriscoPanel.cpp  BriscoPanel.h  CartaAltaFrame.cpp  CartaAltaFrame.h  DoubleValidator.cpp  DoubleValidator.h  IntValidator.cpp  IntValidator.h  OpzioniFrame.cpp  OpzioniFrame.h  README.md  carta.cpp  carta.h  cartaHelper.h  cartaHelperBriscola.h  elaboratoreCarte.h  elaboratoreCarteBriscola.cpp  elaboratoreCarteBriscola.h  en.po  es.po  fr.po  giocatore.cpp  giocatore.h  giocatoreHelper.h  giocatoreHelperCpu.cpp  giocatoreHelperCpu.h  giocatoreHelperCpu0.cpp  giocatoreHelperCpu0.h  giocatoreHelperCpu1.cpp  giocatoreHelperCpu1.h  giocatoreHelperCpu2.cpp  giocatoreHelperCpu2.h  giocatoreHelperUtente.cpp  giocatoreHelperUtente.h  (+14 more)
SPECS/: wxbriscola.spec
debian/: README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  rules  wxbriscola-mazzi-4k-belle-epoque.install  wxbriscola-mazzi-4k-binario.install  wxbriscola-mazzi-4k-bolognese.install  wxbriscola-mazzi-4k-bresciano.install  wxbriscola-mazzi-4k-dr-francy.install  wxbriscola-mazzi-4k-lombardo.install  wxbriscola-mazzi-4k-napoletano.install  wxbriscola-mazzi-4k-poker-pinup.install  wxbriscola-mazzi-4k-toscano.install  wxbriscola-mazzi-4k-trentino.install  wxbriscola-mazzi-4k-triestino.install  wxbriscola-mazzi-bergamasco.install  wxbriscola-mazzi-genovese.install  wxbriscola-mazzi-hd-fable3.install  wxbriscola-mazzi-hd-gatti.install  wxbriscola-mazzi-hd-playing-mario.install  wxbriscola-mazzi-hd-siciliano.install  wxbriscola-mazzi-hd-trevigiano.install  wxbriscola-mazzi-piacentino.install  wxbriscola-mazzi-romagnolo.install  wxbriscola-mazzi-sardo.install  wxbriscola-mazzi-tomb-raider-anniversary.install  wxbriscola.install  wxbriscola.postrm
gpg/: Giulio Sorrentino.asc
po/: en.mo  en.po  es.mo  es.po  fr.mo  fr.po  it.mo  it.po  wxBriscola.pot  wxbriscola.pot
snap/: snapcraft.yaml
